--- a/modules/rtp_rtcp/BUILD.gn
+++ b/modules/rtp_rtcp/BUILD.gn
@@ -233,8 +233,6 @@ rtc_library("rtp_rtcp") {
     "source/rtp_video_stream_receiver_frame_transformer_delegate.h",
     "source/source_tracker.cc",
     "source/source_tracker.h",
-    "source/time_util.cc",
-    "source/time_util.h",
     "source/tmmbr_help.cc",
     "source/tmmbr_help.h",
     "source/ulpfec_generator.cc",
@@ -272,6 +270,7 @@ rtc_library("rtp_rtcp") {
 
   deps = [
     ":leb128",
+    ":ntp_time_util",
     ":rtp_rtcp_format",
     ":rtp_video_header",
     "..:module_api_public",
@@ -355,6 +354,22 @@ rtc_library("rtp_rtcp") {
   ]
 }
 
+rtc_library("ntp_time_util") {
+  visibility = [ "*" ]
+  sources = [
+    "source/time_util.cc",
+    "source/time_util.h",
+  ]
+  deps = [
+    "../../api/units:time_delta",
+    "../../rtc_base:checks",
+    "../../rtc_base:divide_round",
+    "../../rtc_base:safe_conversions",
+    "../../rtc_base:timeutils",
+    "../../system_wrappers",
+  ]
+}
+
 rtc_source_set("rtp_rtcp_legacy") {
   sources = [
     "include/rtp_rtcp.h",
@@ -364,6 +379,7 @@ rtc_source_set("rtp_rtcp_legacy") {
     "source/rtp_rtcp_impl.h",
   ]
   deps = [
+    ":ntp_time_util",
     ":rtp_rtcp",
     ":rtp_rtcp_format",
     "..:module_fec_api",
@@ -401,6 +417,7 @@ rtc_library("rtcp_transceiver") {
     "source/rtcp_transceiver_impl.cc",
   ]
   deps = [
+    ":ntp_time_util",
     ":rtp_rtcp",
     ":rtp_rtcp_format",
     "../../api:array_view",
@@ -636,6 +653,7 @@ if (rtc_include_tests) {
       ":frame_transformer_factory_unittest",
       ":leb128",
       ":mock_rtp_rtcp",
+      ":ntp_time_util",
       ":rtcp_transceiver",
       ":rtp_packetizer_av1_test_helper",
       ":rtp_rtcp",
