Switch away from hz to samples per channel
Bug: none
Change-Id: I6d2953ba5ee99771f3ff5bf4f4a049a8a29b5577

--- a/modules/audio_processing/agc2/BUILD.gn
+++ b/modules/audio_processing/agc2/BUILD.gn
@@ -388,6 +388,7 @@ rtc_library("fixed_digital_unittests") {
     "..:apm_logging",
     "..:audio_frame_view",
     "../../../api:array_view",
+    "../../../api/audio:audio_frame_api",
     "../../../common_audio",
     "../../../rtc_base:checks",
     "../../../rtc_base:gunit_helpers",
